<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingBottom="8dp">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/vec_arrow_back"
            app:title="@string/Agendar_desligamento"
            app:titleTextColor="?colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:elevation="5dp"
            android:hint="@string/Nome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                tools:text="Próximo episódio" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_velocidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:elevation="5dp"
            android:hint="@string/Velocidade">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_velocidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                android:inputType="numberDecimal"
                tools:text="1.7x" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_remover"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Remover_acao"
            app:icon="@drawable/vec_cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_ip" />

        <Button
            android:id="@+id/btn_confirmar_remocao"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Clique_para_confirmar_remocao"
            android:visibility="gone"
            app:icon="@drawable/vec_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_ip"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancelar"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/Cancelar"
                app:icon="@drawable/vec_cancelar" />

            <Button
                android:id="@+id/btn_salvar"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/Salvar"
                app:icon="@drawable/vec_check" />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>