<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/vec_arrow_back"
            app:title="@string/Alterar_ip_e_porta"
            app:titleTextColor="?colorPrimary" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_porta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:elevation="5dp"
            android:hint="@string/Porta"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_porta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="18"
                android:maxLines="5"
                tools:text="18954" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/Endereco_ip"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/input_porta">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="123456789."
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="18"
                android:maxLines="1"
                tools:text="192.168.16.123" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cancelar"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Cancelar"
            app:icon="@drawable/vec_cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_ip" />

        <Button
            android:id="@+id/btn_salvar"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/Salvar"
            app:icon="@drawable/vec_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/input_ip" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>